# sudoku_solver

./: .gitignore  .travis.yml  0.bootstrap.js  1.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  manifest.json  src_index_tsx-data_image_svg_xml_3csvg_xmlns_27http_www_w3_org_2000_svg_27_viewBox_27-4_-4_8_-5251bf.bootstrap.js  vendors-node_modules_react-bootstrap_esm_Button_js-node_modules_react-bootstrap_esm_Container-6e65b0.bootstrap.js
assets/: problem_hard.txt  solution_easy.txt
sample_data/: problem_easy.txt
src/: lib.rs  main.rs
www/: .babelrc  bootstrap.js  index.js  package-lock.json  package.json  webpack.config.js
www/public/: bootstrap.js  index.html
www/src/: App.css  App.js  App.tsx  Test.tsx  index.html  index.js  index.tsx
www/src/sudoku/: SudokuTable.css  SudokuTable.tsx  SudokuTableCore.tsx
