[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["Stefan Andreas Baur <stefan.a.baur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.8"
chrono = "0.4"
env_logger = "0.7.1"
regex = "1"
