[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["Stefan Andreas Baur <stefan.a.baur@gmail.com>"]
edition = "2018"

[lib]
crate-type=["rlib", "cdylib"]
name = "sudoku_solver"
path = "src/lib.rs"

[[bin]]
name = "sudoku_solver_bin"
path = "src/main.rs"

[dependencies]
clap = "4.5.24"
log = "0.4.22"
chrono = "0.4"
env_logger = "0.11.6"
regex = "1"
wasm-bindgen = "0.2.99"
